--- a/app/assets/javascripts/layui.js.erb
+++ b/app/assets/javascripts/layui.js.erb
@@ -14,7 +14,7 @@
         }(),
         a = function(t) { e.console && console.error && console.error("Layui hint: " + t) },
         i = "undefined" != typeof opera && "[object Opera]" === opera.toString(),
-        u = { layer: "modules/layer", laydate: "modules/laydate", laypage: "modules/laypage", laytpl: "modules/laytpl", layim: "modules/layim", layedit: "modules/layedit", form: "modules/form", upload: "modules/upload", transfer: "modules/transfer", tree: "modules/tree", table: "modules/table", element: "modules/element", rate: "modules/rate", colorpicker: "modules/colorpicker", slider: "modules/slider", carousel: "modules/carousel", flow: "modules/flow", util: "modules/util", code: "modules/code", jquery: "modules/jquery", mobile: "modules/mobile", "layui.all": "../layui.all" };
+        u = { layer: "modules/layer", laydate: "modules/laydate", laypage: "modules/laypage", laytpl: "modules/laytpl", layim: "modules/layim", layedit: "modules/layedit", form: "../../<%= (asset_path 'lay/modules/form').remove(".js") %>", upload: "modules/upload", transfer: "modules/transfer", tree: "modules/tree", table: "modules/table", element: "../../<%= (asset_path 'lay/modules/element').remove(".js") %>", rate: "modules/rate", colorpicker: "modules/colorpicker", slider: "modules/slider", carousel: "modules/carousel", flow: "modules/flow", util: "modules/util", code: "modules/code", jquery: "modules/jquery", mobile: "modules/mobile", "layui.all": "../layui.all" };
     o.prototype.cache = n, o.prototype.define = function(e, t) {
         var o = this,
             r = "function" == typeof e,
