--- a/app/assets/stylesheets/modules/layer/default/layer.scss.erb
+++ b/app/assets/stylesheets/modules/layer/default/layer.scss.erb
@@ -56,11 +56,11 @@ html #layuicss-layer {
 }
 
 .layui-layer-load {
-    background: url(loading-1.gif) center center no-repeat #eee
+    background: url(<%= image_path "layer/loading-1.gif" %>) center center no-repeat #eee
 }
 
 .layui-layer-ico {
-    background: url(icon.png) no-repeat
+    background: url(<%= image_path "layer/icon.png" %>) no-repeat
 }
 
 .layui-layer-btn a,
@@ -602,20 +602,20 @@ html #layuicss-layer {
 .layui-layer-loading .layui-layer-content {
     width: 60px;
     height: 24px;
-    background: url(loading-0.gif) no-repeat
+    background: url(<%= image_path "layer/loading-0.gif" %>) no-repeat
 }
 
 .layui-layer-loading .layui-layer-loading1 {
     width: 37px;
     height: 37px;
-    background: url(loading-1.gif) no-repeat
+    background: url(<%= image_path "layer/loading-1.gif" %>) no-repeat
 }
 
 .layui-layer-ico16,
 .layui-layer-loading .layui-layer-loading2 {
     width: 32px;
     height: 32px;
-    background: url(loading-2.gif) no-repeat
+    background: url(<%= image_path "layer/loading-2.gif" %>) no-repeat
 }
 
 .layui-layer-tips {
@@ -724,7 +724,7 @@ html #layuicss-layer {
 }
 
 .layui-layer-iconext {
-    background: url(icon-ext.png) no-repeat
+    background: url(<%= image_path "layer/icon-ext.png" %>) no-repeat
 }
 
 .layui-layer-prompt .layui-layer-input {
