--- a/app/assets/javascripts/lay/modules/layer.js.erb
+++ b/app/assets/javascripts/lay/modules/layer.js.erb
@@ -39,7 +39,7 @@
             ready: function (e) {
                 var t = "layer",
                     i = "",
-                    n = "<%= asset_url "modules/layer/default/layer.scss" %>";
+                    n = (a ? '<%= asset_url "modules/layer/default/layer.scss" %>' : '<%= asset_url "theme/default/layer.scss" %>') + "?v=" + r.v + i;
                 return a ? layui.addcss(n, e, t) : o.link(n, e, t), this
             },
             alert: function (e, t, n) { var a = "function" == typeof t; return a && (n = t), r.open(i.extend({ content: e, yes: n }, a ? {} : t)) },
